// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Field > should register integer field 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "FieldIntegerType",
    "named": true,
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [
        "update",
        "upsert",
      ],
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "count",
      "max": null,
      "min": null,
      "mode": null,
      "name": "count",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "integer",
      "typedJson": null,
    },
  ],
  "filters": [],
  "generated": [
    {
      "generator": null,
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "namespace": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`Field > should resolve lindorm_id max in stages: explicit > derived > default 255 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "FieldLindormIdMaxStages",
    "named": true,
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [
        "update",
        "upsert",
      ],
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "explicitMax",
      "max": 64,
      "min": null,
      "mode": null,
      "name": "explicitMax",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "lindorm_id",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "derivedMax",
      "max": 37,
      "min": null,
      "mode": null,
      "name": "derivedMax",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "lindorm_id",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "bareDefault",
      "max": 255,
      "min": null,
      "mode": null,
      "name": "bareDefault",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "lindorm_id",
      "typedJson": null,
    },
  ],
  "filters": [],
  "generated": [
    {
      "generator": null,
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "namespace": null,
      "strategy": "uuid",
    },
    {
      "generator": null,
      "key": "derivedMax",
      "length": 32,
      "max": null,
      "min": null,
      "namespace": "user",
      "strategy": "lindorm_id",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;
